--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <script>
     tailwind.config = {
+      darkMode: 'class',
       theme: {
         extend: {
           fontFamily: {
@@ -58,6 +59,10 @@
   <style>
     body {
       background-color: #f8fafc;
+    }
+
+    .dark body {
+      background-color: #0f172a;
     }
   </style>
   <script type="importmap">
