--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
     content="Sistema de gestão de estoque MCI - Controle de inventário, reservas e importações" />
   <meta name="theme-color" content="#00bfa5" />
 
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://mcistore.com.br/" />
+  <meta property="og:title" content="Estoque MCI - Gestão Corporativa" />
+  <meta property="og:description" content="Consulte o estoque em tempo real de equipamentos audivisuais." />
+  <meta property="og:image"
+    content="https://vqnkopzeysrqzxavaxls.supabase.co/storage/v1/object/public/products/logo-mci.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:title" content="Estoque MCI - Gestão Corporativa" />
+  <meta property="twitter:description" content="Consulte o estoque em tempo real de equipamentos audivisuais." />
+  <meta property="twitter:image"
+    content="https://vqnkopzeysrqzxavaxls.supabase.co/storage/v1/object/public/products/logo-mci.png" />
+
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
