--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://mcistore.com.br/" />
+  <meta property="og:url" content="https://estoquemci.vercel.app/" />
   <meta property="og:title" content="Estoque MCI - Gestão Corporativa" />
-  <meta property="og:description" content="Consulte o estoque em tempo real de equipamentos audivisuais." />
+  <meta property="og:description"
+    content="Consulte o estoque em tempo real de equipamentos audiovisuais com precisão e agilidade." />
   <meta property="og:image"
     content="https://vqnkopzeysrqzxavaxls.supabase.co/storage/v1/object/public/products/logo-mci.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:title" content="Estoque MCI - Gestão Corporativa" />
-  <meta property="twitter:description" content="Consulte o estoque em tempo real de equipamentos audivisuais." />
+  <meta property="twitter:description" content="Consulte o estoque em tempo real de equipamentos audiovisuais." />
   <meta property="twitter:image"
     content="https://vqnkopzeysrqzxavaxls.supabase.co/storage/v1/object/public/products/logo-mci.png" />
 
