--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <title>Estoque MCI - Gestão Corporativa</title>
 
   <!-- Favicons -->
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
-  <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192.png" />
-  <link rel="icon" type="image/png" sizes="512x512" href="/favicon-512.png" />
-  <link rel="apple-touch-icon" href="/pwa-icon.png" />
-  <link rel="manifest" href="/manifest.json" />
+  <link rel="icon" type="image/png" href="/favicon.png?v=2" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png?v=2" />
+  <link rel="icon" type="image/png" sizes="192x192" href="/pwa-icon.png?v=2" />
+  <link rel="icon" type="image/png" sizes="512x512" href="/pwa-icon.png?v=2" />
+  <link rel="apple-touch-icon" href="/pwa-icon.png?v=2" />
+  <link rel="manifest" href="/manifest.json?v=2" />
 
   <!-- Meta tags -->
   <meta name="description"
